// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> 5개의 메뉴를 가진다 1`] = `
.c0 {
  margin-bottom: -0.0625rem;
  border-right: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-radius: 0;
}

.c0:first-child {
  border-left: 0.0625rem solid;
}

<IconButton
  className="c0"
  icon="home"
  location="/"
  to="/"
/>
`;

exports[`<Header /> 5개의 메뉴를 가진다 2`] = `
.c0 {
  margin-bottom: -0.0625rem;
  border-right: 0.0625rem solid;
  border-bottom: 0.0625rem solid;
  border-radius: 0;
}

.c0:first-child {
  border-left: 0.0625rem solid;
}

<IconButton
  className="c0"
  icon="user"
  location="/"
  to="/auth"
/>
`;

exports[`<Header /> 정상적으로 렌더링된다 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-width: 64rem;
  width: 100%;
  margin: auto;
}

.c1 {
  width: 2.5rem;
  height: 2.5rem;
  margin: 0 1rem 0 2rem;
}

.c2 {
  margin-left: 0.4rem;
}

@media (max-width:639px) {
  .c2 {
    display: none;
  }
}

<div
  class=""
>
  <div
    class="c0"
  >
    <img
      class="c1"
      src="/resources/logo.svg"
    />
    <span
      componentname="IconButton"
    >
      <span
        class="c2"
      >
        홈
      </span>
    </span>
    <span
      componentname="IconButton"
    >
      <span
        class="c2"
      >
        즐겨찾기
      </span>
    </span>
    <span
      componentname="IconButton"
    >
      <span
        class="c2"
      >
        커뮤니티
      </span>
    </span>
    <span
      componentname="IconButton"
    />
  </div>
</div>
`;

exports[`<Header /> 커뮤니티 메뉴가 선택되어 있다 1`] = `
<div
  className=""
>
  <Container>
    <Image
      src="/resources/logo.svg"
    />
    <StyledIconButton
      icon="home"
      location="/community"
      to="/"
    >
      <Menu>
        홈
      </Menu>
    </StyledIconButton>
    <StyledIconButton
      icon="star"
      location="/community"
      to="/bookmarks"
    >
      <Menu>
        즐겨찾기
      </Menu>
    </StyledIconButton>
    <StyledIconButton
      icon="comment"
      location="/community"
      to="/community"
    >
      <Menu>
        커뮤니티
      </Menu>
    </StyledIconButton>
    <StyledIconButton
      icon="user"
      location="/community"
      to="/auth"
    />
  </Container>
</div>
`;
